gary #899 fix spacing for carousel

--- a/src/StockportWebapp/wwwroot/assets/sass/healthystockport/modules/_homepage.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/healthystockport/modules/_homepage.scss
@@ -37,7 +37,7 @@
 }
 
 .hs-carousel-container {
-    padding: 10px 40px 40px 30px;
+    padding: 10px 30px 40px 30px;
 
     .webcast-text {
         left: 45px;
